--- a/TuneTracker/templates/song_list.html
+++ b/TuneTracker/templates/song_list.html
@@ -1,7 +1,49 @@
-<h1>Song List</h1>
+{% extends "master.html" %}
 
-<ul>
-    {% for song in songs %}
-        <li><a href="{% url 'song_detail' song_id=song.id %}">{{ song.title }}</a></li>
-    {% endfor %}
-</ul>
+{% load static %}
+
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'songs.css' %}">
+{% endblock %}
+
+
+{% block content %}
+<div class="song_list">
+    <h1>Your Songs</h1>
+
+    
+    {% if songs %}
+        <ul>
+            {% for song in songs %}
+                <li style="background-color: {{ song.artist.color }}">
+                    <a href="{% url 'song_detail' song_id=song.id %}">{{ song.title }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No songs</p>
+    {% endif %}
+
+    {% if songs %}
+        <div class="feature">
+            <h2>Artists</h2>
+            {% if feature %}
+                <ul>
+                    {% for key, value in feature.items %}
+                        <li style="background-color: {{ value.color }}">
+                            <h4>{{ key }}</h4>
+                            <p>Songs: {{ value.count }}</p>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+    {% endif %}
+
+    <div class="controls">
+        <a href="{% url 'admin:index' %}" id="access_admin">Access Admin</a>
+        <a href="{% url 'add_song' %}" id="add_song">Add Song</a>
+    </div>
+</div>
+{% endblock %}
